--- a/templates/another home/base.html
+++ b/templates/another home/base.html
@@ -200,8 +200,8 @@
     
           <footer>
             <div class="footer-copyRight">
-              <div style="gap: 5px; margin: 5px; width: 100%;border-radius: 12px; background-color: rgb(191, 229, 247);display: flex; padding: 10px;">
-                <p>Send feedback to <span style="color: blue;">support@ctndrd.com</span></p>
+              <div style="gap: 5px; margin: 5px; width: 100%;border-radius: 12px; background-color: rgb(206, 207, 207);display: flex; padding: 10px;">
+                <p>Send feedback to <span style="color: blue;font-size: 8px;">support@ctndrd.com</span></p>
               </div>
             </div>
           </footer>
