--- a/templates/another home/base.html
+++ b/templates/another home/base.html
@@ -201,7 +201,7 @@
           <footer>
             <div class="footer-copyRight">
               <div style="gap: 5px; margin: 5px; width: 100%;border-radius: 12px; background-color: rgb(206, 207, 207);display: flex; padding: 10px;">
-                <p>Send feedback to <span style="color: blue;font-size: 8px;">support@ctndrd.com</span></p>
+                <p style="font-size: 8px">Send feedback to <span style="color: blue;font-size: 8px;">support@ctndrd.com</span></p>
               </div>
             </div>
           </footer>
