--- a/templates/profile/profile-page.html
+++ b/templates/profile/profile-page.html
@@ -72,7 +72,7 @@
                     border-radius: 18px;"><i class="fa-solid fa-right-from-bracket menu-icon"></i>Logout</a>
 
                 </div>
-                {% if request.user.post.all %}
+                {% if profile.user.posts.all %}
                     <div style="border: 1px solid green;
                     text-align: center;
                     border-radius: 50px;
