messages overflow edit

--- a/templates/messages/messages.html
+++ b/templates/messages/messages.html
@@ -26,7 +26,7 @@
                                 <div class="contact_name">{{messag.follow.user.profile.firstname}} {{messag.follow.user.profile.lastname}}</div>
                                 <div class="contact_msg">{{messag.latest_message.message}}</div>
                             </div>
-                            <div class="chat_status">
+                            <div class="chat_status" style="overflow-y: hidden;">
                                 <div class="chat_date">{{messag.latest_message.timestamp|timesince}}</div>
                                 <div class="chat_new grad_pb"> Chat </div>
                             </div>
