--- a/templates/messages/messages.html
+++ b/templates/messages/messages.html
@@ -24,7 +24,7 @@
                             {% endif %}
                             <div class="chat_info" style="overflow-y: hidden;">
                                 <div class="contact_name">{{messag.follow.user.profile.firstname}} {{messag.follow.user.profile.lastname}}</div>
-                                <div class="contact_msg">{{messag.latest_message.message}}</div>
+                                <div class="contact_msg" style="overflow-y: hidden;">{{messag.latest_message.message}}</div>
                             </div>
                             <div class="chat_status">
                                 <div class="chat_date">{{messag.latest_message.timestamp|timesince}}</div>
