--- a/templates/profile/profile-page.html
+++ b/templates/profile/profile-page.html
@@ -307,7 +307,7 @@
                         margin-bottom: 20px;
                         border-radius: 12px;
                         width: 100%;
-                        border: 1px solid #ccc;" type="file" required id="movie" name="video">
+                        border: 1px solid #ccc;" type="file" id="movie" name="video">
 
                         <label style="margin-bottom: 10px;" for="actors">Price</label>
                         <input style="
